--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -161,15 +161,15 @@
                     <div class="container-fluid taskDataList">
                         <div class="row fm-taskSorter">
                             <select ng-model="myOption" ng-change="condtionChange()" ng-blur="changeSelectOnBlur()" ng-focus="changeSelectOnFoucs()" class="form-control" ng-class="{true:'actived',false:'unactived'}[selectArrow]">
-                                <option value="0">默认</option>
-                                <option value="1">任务名称</option>
-                                <option value="2">完成时间</option>
+                                <option value="0">任务名称</option>
+                                <option value="1">开始时间</option>
+                                <option value="2">结束时间</option>
                                 <option value="3">完成进度</option>
                             </select>
                         </div>
 
                         <div class="row fm-taskDataList">
-                            <div class="col-lg-3 col-md-4 col-sm-6  col-xs-12" ng-repeat="item in currentSubTaskList">
+                            <div class="col-lg-3 col-md-4 col-sm-6  col-xs-12" ng-repeat="item in currentSubTaskList | orderBy : sortCondtion">
                                 <div class="taskItem">
                                     <div class="taskItem-heading" ng-class="{true:'finishColor',false:'unfinishColor'}[item.percent==100]">
                                         <div style="float: left;width: 180px;" title="{{item.name}}" class="text-ellipsis" ng-bind="item.name"></div>
@@ -211,19 +211,19 @@
                             </div>
 
                             <!-- -->
-                            <div class="col-lg-3 col-md-4 col-sm-6  col-xs-12" ng-repeat="item in currentSubTaskList">
+                            <div class="col-lg-3 col-md-4 col-sm-6  col-xs-12" ng-repeat="item in currentSubTaskList | orderBy : 'planEndDate'">
                                 <div class="taskItem">
                                     <div class="taskItem-heading" ng-class="{true:'finishColor',false:'unfinishColor'}[item.percent==100]">
                                         <div style="float: left" ng-bind="'任务名称'"></div>
                                         <button ng-if="item.percent==100" type="button" style="padding: 1px 15px;float: right;background: #6AD0A6;border: 1px solid #128D92;" class="btn clearfix">提交</button>
                                         <div class="clearfix"></div>
                                     </div>
-                                    <div ng-click="goEditorPage()" class="taskItem-body">
+                                    <div ng-click="goEditorPage(item.subtaskId)" class="taskItem-body">
                                         <ul class="fm-ul ItemInfo">
                                             <li>
                                                 <div class="itemInfo-left"><label>完成进度：</label></div>
                                                 <div class="itemInfo-right">
-                                                    <div class="col-md-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" type="success"></uib-progressbar></div>
+                                                    <div class="col-md-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" animate="false" type="success"></uib-progressbar></div>
                                                     <div class="col-md-3" style="color: #6AD0A6" ng-bind="'　'+item.percent+'%'"></div>
                                                 </div>
                                             </li>
