批处理重改

--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -179,7 +179,7 @@
                                             <li>
                                                 <div class="itemInfo-left"><label>完成进度：</label></div>
                                                 <div class="itemInfo-right">
-                                                    <div class="col-lg-8 col-md-10 col-sm-9 col-xs-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" type="success"></uib-progressbar></div>
+                                                    <div class="col-lg-8 col-md-10 col-sm-9 col-xs-9"><uib-progressbar animate="false" style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" type="success"></uib-progressbar></div>
                                                     <div class="col-lg-4 col-md-3 hidden-md hidden-sm hidden-xs" style="color: #6AD0A6" ng-bind="'　'+item.percent+'%'"></div>
                                                 </div>
                                             </li>
