--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-road.js"></script>
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-canvasFeature.js"></script>
         <script type="text/javascript" src="../../../scripts/utils/Utils.js"></script>
+        <script src="http://cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>
         <script src="loadMapApi.js"></script>
         <script src="loadUikit.js"></script>
     </head>
