--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -22,13 +22,11 @@
 </head>
 <body ng-controller="loginCtrl">
 <!-- main login part -->
-<div class="wrapper container">
-    <div class="backgroundImageDiv">
-        <div class="loginDiv">
-            <div style="font-size: 14px">
-                <!--<div class="company-logo"></div>-->
-                <login valid-type="1"></login>
-            </div>
+<div class="wrapper container" ng-style="loginBackground">
+    <div class="backgroundImageDiv" ng-style="loginLogo">
+        <div ng-style="loginEntryDiv">
+            <!--<div class="company-logo"></div>-->
+            <login valid-type="1" percent-data={{percentData}}></login>
         </div>
     </div>
 </div>
