道路名专项作业功能增加

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -137,8 +137,9 @@
                             </div>
                         </div>
                         <!--上方输出信息面板-->
-                        <div class="fm-foldable fm-row" style="height:100%;left:2px;width:auto;" ng-style="{'top':{true: '29px', false: '-1100px'}[workPanelOpened], right: {true: '302px', false: '2px', 'none': '2px'}[editorPanelOpened]}">
+                        <div class="fm-foldable fm-row" style="height:100%;left:2px;width:auto;" ng-style="{'top':{true: '5px', false: '-1100px'}[workPanelOpened], right: {true: '302px', false: '2px', 'none': '2px'}[editorPanelOpened]}">
                             <div class="fm-container fm-row" style="height:100%;">
+                            	<button type="button" class="close" ng-click="closeSpecialWorkPanelTpl()"><span style="position: relative;right: 10px;top: 5px;">&times;</span></button>
                                 <div ng-include="specialWorkPanelTpl"></div>
                             </div>
                         </div>
