--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -167,7 +167,7 @@
                     </button>
                 </div>
                 <!--task data list-->
-                <div ng-if="dataExist" ui-layout-container class="scroll-styled scrollDiy">
+                <div ng-if="dataExist" ui-layout-container class="scroll-styled scrollDiy" ng-show="showTask">
                     <div class="taskDataList">
                         <div class="fm-taskSorter" ng-style="taskMargin">
                             <select ng-model="myOption" ng-change="condtionChange(myOption)" ng-blur="changeSelectOnBlur()" ng-focus="changeSelectOnFoucs()" class="form-control">
@@ -235,65 +235,35 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- -->
-                            <!--<div class="col-lg-3 col-md-4 col-sm-6  col-xs-12" ng-repeat="item in currentSubTaskList | orderBy : sortCondtion">-->
-                                <!--<div ng-cloak class="taskItem ng-cloak">-->
-                                    <!--<div class="taskItem-heading" ng-class="{true:'finishColor',false:'unfinishColor'}[item.percent==100]">-->
-                                        <!--<div style="float: left" ng-bind="'任务名称'"></div>-->
-                                        <!--<button ng-if="item.percent==100" type="button" style="padding: 1px 15px;float: right;background: #6AD0A6;border: 1px solid #128D92;" class="btn clearfix">提交</button>-->
-                                        <!--<div class="clearfix"></div>-->
-                                    <!--</div>-->
-                                    <!--<div ng-click="goEditorPage(item.subtaskId)" class="taskItem-body">-->
-                                        <!--<ul class="fm-ul ItemInfo">-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label>完成进度：</label></div>-->
-                                                <!--<div class="itemInfo-right">-->
-                                                    <!--<div class="col-md-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" animate="false" type="success"></uib-progressbar></div>-->
-                                                    <!--<div class="col-md-3" style="color: #6AD0A6" ng-bind="'　'+item.percent+'%'"></div>-->
-                                                <!--</div>-->
-                                            <!--</li>-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label>创建时间：</label></div>-->
-                                                <!--<div class="itemInfo-right" ng-bind="'2016-10-1'"></div>-->
-                                            <!--</li>-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label>结束时间：</label></div>-->
-                                                <!--<div class="itemInfo-right" ng-bind="'2016-10-28'"></div>-->
-                                            <!--</li>-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label style="letter-spacing: 1px;">任 务 量：</label></div>-->
-                                                <!--<div class="itemInfo-right">200个POI，100条tips</div>-->
-                                            <!--</li>-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label>类　　型：</label></div>-->
-                                                <!--<div class="itemInfo-right">日一体化任务</div>-->
-                                            <!--</li>-->
-                                            <!--<li>-->
-                                                <!--<div class="itemInfo-left"><label style="letter-spacing: 1px;">作 业 季：</label></div>-->
-                                                <!--<div class="itemInfo-right">2016年秋</div>-->
-                                            <!--</li>-->
-                                        <!--</ul>-->
-                                    <!--</div>-->
-                                    <!--<div class="taskItemTemp" ng-if="$index==0" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
-                                        <!--<div style="padding: 50px;font-size: 20px;color: #e83b68;text-align: center;">-->
-                                            <!--<p style="font-size: 20px;">存在8条错误数据</p>-->
-                                            <!--<p style="letter-spacing: 1px">请修改后在提交！</p>-->
-                                            <!--<p style="font-size: 20px;padding: 20px;">任务提交失败</p>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                    <!--<div class="taskItemTemp" ng-if="$index==1" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
-                                        <!--<img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-percent.png" />-->
-                                        <!--<p style="text-align: center; font-size: 15px;font-weight: bold">任务提交中，预计需要三分钟</p>-->
-                                    <!--</div>-->
-                                    <!--<div class="taskItemTemp" ng-if="$index==3" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
-                                        <!--<img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-succ.png" />-->
-                                        <!--<p style="text-align: center; font-size: 15px;font-weight: bold">任务提交成功</p>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-
                         </div>
+                    </div>
+                </div>
+                <div ng-show="!showTask" class="scroll-styled scrollDiy" style="margin-left: 60px">
+                    <div class="fm-taskDataList" style="padding-top: 80px">
+                        <table class="table table-bordered table-striped">
+                            <thead>
+                            <tr>
+                                <th>序号</th>
+                                <th>项目名称</th>
+                                <th>项目类型</th>
+                                <th>创建时间</th>
+                                <th>开始时间</th>
+                                <th>结束时间</th>
+                                <th>状态</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="item in currentSubTaskList | orderBy : sortCondtion">
+                                <td>{{$index + 1}}</td>
+                                <td>{{item.name}}</td>
+                                <td>{{item.stage+' '+item.type}}</td>
+                                <td>{{item.planStartDate}}</td>
+                                <td>{{item.planStartDate}}</td>
+                                <td>{{item.planEndDate}}</td>
+                                <td>已完成</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
