--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -218,21 +218,21 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="taskItemTemp" ng-if="$index==0" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">
-                                        <div style="padding: 50px;font-size: 18px;color: #ff5883;text-align: center;">
-                                            <p>存在8条错误数据</p>
-                                            <p>请修改后再进行提交！</p>
-                                            <p style="padding-top: 42px;font-size: 16px">任务提交失败</p>
-                                        </div>
-                                    </div>
-                                    <div class="taskItemTemp" ng-if="$index==1" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">
-                                        <img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-percent.png" />
-                                        <p style="text-align: center; font-size: 15px;font-weight: bold">任务提交中，预计需要三分钟</p>
-                                    </div>
-                                    <div class="taskItemTemp" ng-if="$index==3" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">
-                                        <img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-succ.png" />
-                                        <p style="text-align: center; font-size: 15px;font-weight: bold">任务提交成功</p>
-                                    </div>
+                                    <!--<div class="taskItemTemp" ng-if="$index==0" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
+                                        <!--<div style="padding: 50px;font-size: 18px;color: #ff5883;text-align: center;">-->
+                                            <!--<p>存在8条错误数据</p>-->
+                                            <!--<p>请修改后再进行提交！</p>-->
+                                            <!--<p style="padding-top: 42px;font-size: 16px">任务提交失败</p>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="taskItemTemp" ng-if="$index==1" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
+                                        <!--<img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-percent.png" />-->
+                                        <!--<p style="text-align: center; font-size: 15px;font-weight: bold">任务提交中，预计需要三分钟</p>-->
+                                    <!--</div>-->
+                                    <!--<div class="taskItemTemp" ng-if="$index==3" style="position: absolute;width: 100%;height: 100%;background-color:#FFFFFF;opacity: 0.9;top: 0">-->
+                                        <!--<img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-succ.png" />-->
+                                        <!--<p style="text-align: center; font-size: 15px;font-weight: bold">任务提交成功</p>-->
+                                    <!--</div>-->
                                 </div>
                             </div>
                         </div>
