--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -85,8 +85,8 @@
                         <div ng-cloak id="map" ng-style="{backgroundColor:'#F0F4F8',width: '100%',height: '100%'}">
                             <div id="zoomLevelBar" class="div-float" style="bottom:5px;left:5px;width:100px;"></div>
                         </div>
-                        <div ng-show="advancedTool!=null" class="div-float animated-fast fadeInDown" style="top:50px;left:30%;right: 30%;max-width: 800px;">
-                            <button type="button" class="close" ng-click="closeAdvancedToolsPanel()"><span style="position: relative;right: 10px;top: 5px;">&times;</span></button>
+                        <div ng-show="advancedTool!=null" class="div-float animated-fast fadeInDown" ng-style="{left:advancedTool=='check'?'15%':'30%',right:advancedTool=='check'?'15%':'30%'}" style="top:50px;left:30%;right: 30%;">
+                            <button ng-show="advancedTool!=null" type="button" class="close ng-cloak" ng-click="closeAdvancedToolsPanel()"><span style="position: relative;right: 10px;top: 5px;">&times;</span></button>
                             <div ng-include="advancedToolPanelTpl"></div>
                         </div>
                         <!--右侧属性编辑面板-->
