--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -42,11 +42,52 @@
             <div class="fm-top" style="left:60px;right:200px;position:fixed;min-width:1100px;">
                 <div ng-include="editorToolbarTpl"></div>
             </div>
-            <div class="fm-top" style="width:208px;right:0px;text-align:right;padding:0px 25px;">
+            <div class="fm-top" style="width:208px;right:0px;text-align:right;padding:0px 25px;position: fixed;" uib-dropdown is-open="status.isopen" auto-close="outsideClick " appendToOpenClass="fadeInDown">
                 <button class="fm-top-right-btn profile" title="个人信息"></button>
-                <button class="fm-top-right-btn notice" title="我的消息" ng-click="historyMsg();">
+                <button class="fm-top-right-btn notice dropdown dropdown-toggle" uib-dropdown-toggle title="我的消息" ng-click="historyMsg();">
                     <div ng-class="{'msg-alert animated':true,'wobble':systemMsg.length}" ng-if="systemMsg.length" ng-bind="systemMsg.length"></div>
                 </button>
+                <ul class="dropdown-menu dropdown-menu-right animated-fast msg-dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <li>
+                        <div class="msg-container">
+                            <div class="msgContainerlist" ng-show="!showMsgDetail">
+                                <div class="topmenu">
+                                    <span ng-class="{'newMessage':true,'active':sysMsgType=='new'}" title="未读消息" ng-click="switchMsgType('new');"></span>
+                                    <span ng-class="{'history':true,'active':sysMsgType=='his'}" title="已读消息" ng-click="switchMsgType('his');"></span>
+                                </div>
+
+                                <div class="msg-list">
+                                    <div class="message-item" ng-if="!sysMsgItem.length">
+                                        <p class="null-msg">
+                                            当前无消息
+                                        </p>
+                                    </div>
+                                    <div class="message-item" ng-repeat="item in sysMsgItem" ng-click="showDetailMsg(item.msgId);" title="{{item.msgContent}}">
+                                        <p>
+                                            <strong ng-bind="item.msgTitle" ng-class="{true:'history'}[sysMsgType=='his']"></strong>
+                                            <span ng-bind="item.msgContent"></span>
+                                        </p>
+                                        <div ng-class="{'status available':true,'inactive':sysMsgType=='his'}"></div>
+                                    </div>
+                                    <div class="msg-pagination" ng-if="sysMsgType=='his'">
+                                        <ul uib-pagination boundary-links="true" total-items="totalItems" ng-change="pageChanged()" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div ng-class="{'detailview p1 animated-fast':true,'fadeIn':showMsgDetail,'fadeOutUp':!showMsgDetail}" ng-show="showMsgDetail">
+                                <div class="profile-title animated-fast">
+                                    <div id="close" ng-click="showDetailMsg(-1);" title="点击返回">
+                                        <div ng-class="{'cy':true,'cy s1 s2 s3':showMsgDetail}"></div>
+                                        <div ng-class="{'cy':true,'cx s1 s2 s3':showMsgDetail}"></div>
+                                    </div>
+                                    <p class="animated-fast fadeInUp" ng-bind="sysMsgObj.msgTitle"></p>
+                                </div>
+                                <div class="detail-messages" ng-bind="sysMsgObj.msgContent"></div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
                 <button class="fm-top-right-btn logout" title="返回任务列表" ng-click="goback()"></button>
             </div>
         </div>
