--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -70,7 +70,8 @@
                                         <div ng-class="{'status available':true,'inactive':sysMsgType=='his'}"></div>
                                     </div>
                                     <div class="msg-pagination" ng-if="sysMsgType=='his'">
-                                        <ul uib-pagination boundary-links="true" total-items="totalItems" ng-change="pageChanged()" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+                                        <!--<ul uib-pagination items-per-page="5" boundary-links="true" total-items="totalItems" ng-change="pageChanged()" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>-->
+                                        <ul uib-pagination items-per-page="5" max-size="5" total-items="totalItems" ng-model="currentPage" class="pagination" boundary-links="true" force-ellipses="true" ng-change="pageChanged()" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
                                     </div>
                                 </div>
                             </div>
