--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -214,7 +214,7 @@
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label style="width: 60px;text-align: right;font-weight: 100">作业季：</label></div>
-                                                <div class="itemInfo-right text-ellipsis" ng-bind="item.descp"></div>
+                                                <div class="itemInfo-right text-ellipsis" ng-bind="item.version"></div>
                                             </li>
                                         </ul>
                                     </div>
