--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/font-awesome-4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-datepicker/css/datepicker3.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/srs/srs.css">
+        <link rel="stylesheet" type="text/css" href="../../../scripts/libs/select2/css/select2.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/wicket.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/Control.MiniMap.js"></script>
