--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -78,7 +78,7 @@
 
                             <div ng-class="{'detailview p1 animated-fast':true,'fadeIn':showMsgDetail,'fadeOutUp':!showMsgDetail}" ng-show="showMsgDetail">
                                 <div class="profile-title animated-fast">
-                                    <div id="close" ng-click="showDetailMsg(-1);" title="点击返回">
+                                    <div id="close" ng-click="showDetailMsg(-1);" title="点击返回" class="animated-fast rollIn">
                                         <div ng-class="{'cy':true,'cy s1 s2 s3':showMsgDetail}"></div>
                                         <div ng-class="{'cy':true,'cx s1 s2 s3':showMsgDetail}"></div>
                                     </div>
