--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -30,7 +30,6 @@
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-road.js"></script>
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-canvasFeature.js"></script>
         <script type="text/javascript" src="../../../scripts/utils/Utils.js"></script>
-        <script src="http://cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>
         <script src="loadMapApi.js"></script>
         <script src="loadUikit.js"></script>
     </head>
@@ -64,7 +63,7 @@
                                         </p>
                                     </div>
                                     <div class="message-item" ng-repeat="item in sysMsgItem" ng-click="showDetailMsg(item.msgId);" title="{{item.msgContent}}">
-                                        <p>
+                                        <p class="text-ellipsis">
                                             <strong ng-bind="item.msgTitle" ng-class="{true:'history'}[sysMsgType=='his']"></strong>
                                             <span ng-bind="item.msgContent"></span>
                                         </p>
