保存时加上页面加载动画，防止重复点击

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -205,7 +205,7 @@
         </div>
         </div>
 
-        <div ng-show="showLoading" id="loadingAnimate" class="show-animation" ng-include="'svgLoading.html'"></div>
+        <div ng-show="showLoading.flag" id="loadingAnimate" class="show-animation" ng-include="'svgLoading.html'"></div>
         <div id="dataTipsOriginModal" style="display:none">
             <div ng-include="tipsPitureContainer" style="height: 100%;width: 100%"></div>
         </div>
