--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -188,7 +188,7 @@
                             </div>
                         </div> -->
                         <div ng-class="{true:'popoverTips animated-fast fadeInLeft',false:'popoverTips animated-fast fadeOutLeft'}[tipsPanelOpened]">
-                            <div ng-include="tipsTplContainer" class="tipsPanel"></div>
+                            <div ng-include="tipsTplContainer" class="tipsPanel dark scroll-styled"></div>
                         </div>
                     </div>
                     <div id='tooltip' class="tooltipclass"></div>
