--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -208,9 +208,9 @@
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label style="width: 60px;text-align: right;font-weight: 100">任务量：</label></div>
-                                                <div ng-if="(!(item.stage=='日编'&&item.type=='POI子任务')&&!(item.stage=='日编'&&item.type=='一体化_GRID粗编子任务'))" class="itemInfo-right">200个POI，200个Tips</div>
-                                                <div ng-if="((item.stage=='日编'&&item.type=='一体化_GRID粗编子任务'))" class="itemInfo-right"><span style="font-weight: bold">{{item.poi}}</span>个POI <span style="font-weight: bold">{{item.tips}}</span>个Tips</div>
-                                                <div ng-if="((item.stage=='日编'&&item.type=='POI子任务'))" class="itemInfo-right"><span style="font-weight: bold">{{item.poi}}</span>个POI <span style="font-weight: bold">{{item.poi}}</span>个Tips</div>
+                                                <div ng-if="(!(item.stage=='日编'&&item.type=='POI子任务')&&!(item.stage=='日编'&&item.type=='一体化_GRID粗编子任务'))" class="itemInfo-right" ng-bind="'200个POI，200个Tips'"></div>
+                                                <div ng-if="((item.stage=='日编'&&item.type=='一体化_GRID粗编子任务'))" class="itemInfo-right"><span ng-bind="item.poi+'个POI'"></span> <span ng-bind="item.tips+'个Tips'"></span></div>
+                                                <div ng-if="((item.stage=='日编'&&item.type=='POI子任务'))" class="itemInfo-right"><span ng-bind="item.poi+'个POI'"></span> <span ng-bind="item.poi+'个Tips'"></span></div>
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label style="width: 60px;text-align: right;font-weight: 100">类型：</label></div>
