修改tips图片查看样式

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -207,7 +207,7 @@
 
         <div ng-show="showLoading.flag" id="loadingAnimate" class="show-animation" ng-include="'svgLoading.html'"></div>
         <div id="dataTipsOriginModal" style="display:none" class="animated-fast zoomIn">
-            <div ng-include="tipsPitureContainer" style="height: 100%;width: 100%"></div>
+            <div ng-include="tipsPitureContainer"></div>
         </div>
         <div id="dataTipsVideoModal" style="display:none">
             <div ng-include="tipsVideoContainer" style="height: 100%;width: 100%"></div>
